--- a/static/home.html
+++ b/static/home.html
@@ -5,87 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!-- Add Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         header {
-            background-color: #333;
+            background-color: #2c3e50;
             color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
+            padding: 1rem 0;
         }
 
         nav ul li a {
             color: #fff;
             text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: #34495e;
+            color: #fff;
         }
 
         main {
-            padding: 20px;
+            flex: 1;
+            padding: 2rem 0;
         }
 
-        section {
-            margin-bottom: 20px;
+        .hero-section {
+            background-color: #f8f9fa;
+            padding: 3rem 0;
+            margin-bottom: 2rem;
+            border-radius: 8px;
         }
 
         footer {
-            background-color: #333;
+            background-color: #2c3e50;
             color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 1rem 0;
+            margin-top: auto;
         }
     </style>    
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="courses">Courses</a></li>
+        <nav class="container">
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a href="home">Home</a></li>
+                <li class="nav-item"><a href="about">About</a></li>
+                <li class="nav-item"><a href="contact">Contact</a></li>
+                <li class="nav-item"><a href="courses">Courses</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h1>Learn DevOps from Basics</h1>
-            <p>The main purpose of this website is to guide people on how to learn DevOps 
-                from basics for Free. We will provide you with the best resources to learn.
-            </p>
-        </section>
+        <div class="container">
+            <section class="hero-section text-center">
+                <h1 class="display-4">Learn DevOps from Basics</h1>
+                <p class="lead">The main purpose of this website is to guide people on how to learn DevOps 
+                    from basics for Free. We will provide you with the best resources to learn.
+                </p>
+            </section>
 
-        <section>
-            <h2>Overview</h2>
-            <p> Zero to Hero courses on all DevOps tools and popular Cloud(AWS and Azure) platform</p>
-        </section>
-
-        <section>
-            <h2>Courses Offered</h2>
-            <p>Please look at the <a href="courses">courses</a> section.</p>  
-        </section>
+            <section class="row">
+                <div class="col-md-6">
+                    <h2>Overview</h2>
+                    <p class="text-muted">Zero to Hero courses on all DevOps tools and popular Cloud(AWS and Azure) platform</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>Courses Offered</h2>
+                    <p>Please look at the <a href="courses" class="btn btn-primary btn-sm">courses</a> section.</p>  
+                </div>
+            </section>
+        </div>
     </main>
 
-    <footer>
-        <p>&copy; Abhishek.Veeramalla</p>
+    <footer class="text-center">
+        <p class="mb-0">&copy; Abhishek.Veeramalla</p>
     </footer>
+
+    <!-- Add Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
