Changes in home

--- a/static/home.html
+++ b/static/home.html
@@ -89,7 +89,7 @@
     </main>
 
     <footer class="text-center">
-        <p class="mb-0">&copy; Abhishek.Veeramalla</p>
+        <p class="mb-0">&copy; Asmita Parmar</p>
     </footer>
 
     <!-- Add Bootstrap JS -->
