--- a/static/about.html
+++ b/static/about.html
@@ -69,7 +69,7 @@
                     <h1 class="display-4 text-center mb-4">About the Author</h1>
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
-                            <p class="lead">Hi Everyone, My name is Asmita:)</p>
+                            <p class="lead">Hi Everyone, My name is Asmita Parmar:)</p>
                             <p>I am an opensource enthusiast and a great believer in sharing knowledge.</p>
                             
                             <h3 class="mt-4 mb-3">Community Positions</h3>
