Update about.html change in sentence

--- a/static/about.html
+++ b/static/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html>
     <head>
         <title>About</title>
@@ -82,7 +82,7 @@
                             </ul>
                             
                             <div class="mt-4">
-                                <p>If you want to learn complete devops for free with practical projects, checkout the playlist</p>
+                                <p>If you want to learn complete devops for free with practical projects, checkout the playlist for devops</p>
                                 <a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvIKMhk8WhzN1pYoJ1YU8Csa" class="btn btn-primary">View Playlists</a>
                             </div>
                         </div>
