--- a/static/about.html
+++ b/static/about.html
@@ -82,7 +82,7 @@ s<!DOCTYPE html>
                             </ul>
                             
                             <div class="mt-4">
-                                <p>If you want to learn complete devops for free with practical projects, checkout the playlist for devops</p>
+                                <p>If you want to learn complete devops for free with practical projects, checkout the playlist for devops and docker</p>
                                 <a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvIKMhk8WhzN1pYoJ1YU8Csa" class="btn btn-primary">View Playlists</a>
                             </div>
                         </div>
